add user update password
