# internal/model/login.go
@@ -16,3 +16,8 @@ type VerifyOTPOutput struct {
 	UserId  string `json:"user_id"`
 	Message string `json:"message"`
 }
+
+type UpdatePasswordRegisterInput struct {
+	UserToken    string `json:"user_token"`
+	UserPassowrd string `json:"user_password"`
+}
